lets see if this is enough to fix the scrollbars fucking fuckers

--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,15 @@
 body {
   overflow-x: hidden;
 }
+
+body::-webkit-scrollbar {
+  width: 0.5rem !important;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: linear-gradient(
+    oklch(0.6569, 0.196, 275.75),
+    oklch(0.748, 0.26, 342.55)
+  ) !important;
+  border-radius: 4px !important;
+}
